add button sign up with google update

--- a/frontend/diary-frontend/src/components/SignUp/SignUp.css
+++ b/frontend/diary-frontend/src/components/SignUp/SignUp.css
@@ -51,6 +51,14 @@ button:hover{
   color: green
 }
 
+.sign-up-with-google{
+  text-align: center;
+}
+
 a{
   text-decoration: none;
+}
+
+i{
+  margin-right: 8px;
 }
