--- a/frontend/diary-frontend/src/components/SignUp/SignUp.css
+++ b/frontend/diary-frontend/src/components/SignUp/SignUp.css
@@ -3,6 +3,9 @@
   background: #fff;
   margin: 18px auto;
   border-radius: 5px;
+  box-shadow: 0 1px 5px rgb(138, 137, 137);
+  padding-block: 8px;
+  padding-right: 8px
 }
 
 .signup-form .form-row {
