--- a/frontend/diary-frontend/src/components/Header/Header.css
+++ b/frontend/diary-frontend/src/components/Header/Header.css
@@ -24,3 +24,13 @@
   display: flex;
   gap: 14px
 }
+
+.nav-link-button{
+  border: none;
+  color: #fff;
+  padding: 0;
+  margin: 0;
+  font: inherit;
+  cursor: pointer;
+}
+
