--- a/frontend/diary-frontend/src/components/Chatbot/Chatbot.css
+++ b/frontend/diary-frontend/src/components/Chatbot/Chatbot.css
@@ -31,7 +31,6 @@
   align-items: center;
   justify-content: center;
   transition: all 0.3s ease;
-  margin-bottom: 10px;
   z-index: 15;
 }
 
@@ -50,7 +49,7 @@
   font-family: "Inter", sans-serif;
   opacity: 0;
   pointer-events: none;
-  margin: 10px 0;
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
   background-color: #fff;
