--- a/frontend/diary-frontend/src/components/Chatbot/Chatbot.css
+++ b/frontend/diary-frontend/src/components/Chatbot/Chatbot.css
@@ -14,6 +14,7 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
+  max-width: max-content;
   width: 100%;
   align-items: center;
   position: relative;
